--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "animejs": "^2.2.0",
+    "node-sass": "^4.7.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
@@ -38,6 +40,7 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "rimraf": "^2.6.0",
+    "sass-loader": "^6.0.6",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
