--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "animejs": "^2.2.0",
+    "axios": "^0.17.1",
     "node-sass": "^4.7.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
